--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img src="images/profile.png" alt="harshtyagi-profile-img">
       <h2>Hello.</h2>
-      <p class="intro"></pclass>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      <p class="intro"></pclass>Random text loremor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
     </div>
     <hr>
     <div class="skills">
